src/snapshots/lsp_client__jsonrpc_types__tests__response_serde-5.snap
---
source: src/jsonrpc_types.rs
expression: "Response::new(JsonRPCResult::<(),\n            _>::Error(JsonRPCError {\n            code: -1,\n            message: \"message\".to_string(),\n            data: Some(1),\n        }), None)"
---
{
  "jsonrpc": "2.0",
  "error": {
    "code": -1,
    "message": "message",
    "data": 1
  },
  "id": null
}
