src/snapshots/lsp_client__jsonrpc_types__tests__response_serde-8.snap
---
source: src/jsonrpc_types.rs
expression: "Response::new(JsonRPCResult::<_, ()>::Result(vec![1, - 1]), None)"
---
{
  "jsonrpc": "2.0",
  "result": [
    1,
    -1
  ],
  "id": null
}
