src/snapshots/lsp_client__jsonrpc_types__tests__response_serde.snap
---
source: src/jsonrpc_types.rs
expression: "Response::new(JsonRPCResult::<_, ()>::Result(1), Some(1))"
---
{
  "jsonrpc": "2.0",
  "result": 1,
  "id": 1
}
